# LeetCoach

./: .env.example  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.node.json
backend/: requirements.txt
backend/app/: agent_api.py  agent_memory_api.py  agent_routes.py  agent_thread_api.py  ai_client.py  ai_test_enhancer.py  coach.py  codetop.py  codetop_gap.py  config.py  db.py  importer.py  judge.py  judge_service.py  leetcode_cn.py  main.py  notes.py  practice.py  practice_note_api.py  practice_note_routes.py  problem_practice_api.py  problem_practice_routes.py  schemas.py  semantic_tests.py  split_db.py  study_plan_routes.py  study_plans.py  topic_taxonomy.py
backend/tests/: test_agent_memory_api.py  test_agent_runtime.py  test_agent_thread_api.py  test_ai_client.py  test_ai_test_enhancer.py  test_codetop.py  test_codetop_gap.py  test_codetop_weak_batch_proposals.py  test_importer.py  test_judge.py  test_judge_service.py  test_leetcode_cn.py  test_practice_note_api.py  test_practice_notes.py  test_practice_queue.py  test_problem_tags.py  test_progress_summary.py  test_study_plans.py  test_test_overrides.py
src/: App.tsx  main.tsx  styles.css
src/components/: CoachAssistantThread.tsx  CoachMarkdown.tsx  CoachPanel.tsx  CoachRichContent.tsx  CodeBlock.tsx  EditorPanel.tsx  MemoryPanel.tsx  NotesPanel.tsx  ProblemList.tsx  ProblemPanel.tsx  RecommendationTrail.tsx  TestDock.tsx
src/hooks/: index.ts  useCompactLayout.ts  useProblemSelection.ts  useRecommendationRefresh.ts  useSolutionAutosave.ts
src/lib/: api.ts  (+3 more)
(+34 files in other folders)
